Use CTILogger instead of printStackTrace() Assign route ID to each individual switch